<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8492A5"
    tools:context=".esqSenhaCodigo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgCadastro2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:srcCompat="@drawable/logoimg" />

        <TextView
            android:id="@+id/tvEnviado3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/Enviado"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tvEnviado4"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/Enviado2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="300dp"
            android:layout_height="66dp"
            android:ems="10"
            android:hint="@string/Codigo"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="252dp"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btvolta"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="8dp"
                android:background="#ffffff"
                android:text="@string/Voltar"
                android:textAlignment="center"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btConfirmar"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="#2E3C59"
                android:text="@string/Confirmar" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>